# SymphonyQG

./: CMakeLists.txt  beam_results.csv
symqglib/qg/: qg.hpp
symqglib/utils/: buffer.hpp
test/: CMakeLists.txt  bench_sift1m.cpp  build_index.cpp  check_avx512.cpp  run_avx512_test.sh  run_beam_sizes.sh
